--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   },
   "dependencies": {
     "gatsby": "^5.8.0",
+    "mdb-react-ui-kit": "^6.0.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "swiper": "^9.1.1"
   }
 }
